syntax = "proto3";

package survey;

option csharp_namespace = "SurveyService.Survey";

service SurveyService {
  // Define RPC methods here in the future
  rpc GetStatus (GetStatusRequest) returns (GetStatusResponse);
}

message GetStatusRequest {}
message GetStatusResponse {
  string status = 1;
}
